# test_model

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
iric/: definition.xml
source/: test_model.f90
